--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.39.0",
     "@supabase/supabase-js": "^2.39.7",
-    "nodemailer": "^6.9.10"
+    "nodemailer": "^6.9.10",
+    "recharts": "^3.7.0"
   },
   "devDependencies": {
     "@types/react": "^19.2.10",
@@ -18,7 +20,7 @@
     "@vitejs/plugin-react": "^5.1.3",
     "autoprefixer": "^10.4.24",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.18",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.9.3",
     "vite": "^7.3.1"
   }
